# blog

./: .gitignore  Dockerfile  deploy.bat  deploy_manual.bat  docker-compose.yml  main.tf  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: layout.tsx  page.tsx
app/blog/: page.tsx
app/components/: CloudServices.tsx  ProjectCard.tsx  SkillCategory.tsx
app/projects/: page.tsx
app/skills/: page.tsx
content/: projects.json
reverse_proxy/: Dockerfile  nginx.conf
src/: Home.py
src/blog_nextjs/: package.json
src/blog_nextjs/app/: page.tsx
src/blog_nextjs/app/blog/: page.tsx
src/blog_nextjs/app/components/: BlogPost.tsx  Filter.tsx  ProjectCard.tsx  Sidebar.tsx
src/blog_nextjs/content/: services.json  skills.json
src/blog_streamlit/: Home.py  utils.py
src/blog_streamlit/pages/: 1_Skills_and_Services.py  2_Projects.py  4_Blog.py
src/content/: posts.json  skills.json
src/pages/: 1_Skills_and_Services.py  2_Projects.py  3_Contact.py  4_Blog.py
